# RIGBy-cpp

./: .codedocs  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  Riemann-Geometrie.sln  _basics_8hpp.html  _basics_8hpp_source.html  _c_a_s_r_8hpp.html  _c_a_s_r_8hpp_source.html  _c_bias_8hpp.html  _c_bias_8hpp_source.html  _c_matrix_classifier_fg_m_d_m_8hpp.html  _c_matrix_classifier_fg_m_d_m_8hpp_source.html  _c_matrix_classifier_fg_m_d_m_r_t_8hpp.html  _c_matrix_classifier_fg_m_d_m_r_t_8hpp_source.html  _c_matrix_classifier_fg_m_d_m_r_t_rebias_8hpp.html  _c_matrix_classifier_fg_m_d_m_r_t_rebias_8hpp_source.html  _c_matrix_classifier_m_d_m_8hpp.html  _c_matrix_classifier_m_d_m_8hpp_source.html  _c_matrix_classifier_m_d_m_rebias_8hpp.html  _c_matrix_classifier_m_d_m_rebias_8hpp_source.html  _classification_8hpp.html  _classification_8hpp_source.html  _covariance_8hpp.html  _covariance_8hpp_source.html  _distance_8hpp.html  _distance_8hpp_source.html  _featurization_8hpp.html  _featurization_8hpp_source.html  _geodesic_8hpp.html  _geodesic_8hpp_source.html  _google_test_report_8md.html  _i_matrix_classifier_8hpp.html  _i_matrix_classifier_8hpp_source.html  _mean_8hpp.html  _mean_8hpp_source.html  _median_8hpp.html  (+61 more)
Docs/: Doxyfile  GoogleTestReport.html  GoogleTestReport.xml  gtest2html.xslt
GoogleTest/: GoogleTest.vcxproj  GoogleTest.vcxproj.filters  test.xml
doc/: Doxyfile  GoogleTestReport.html  GoogleTestReport.xml
docs/: Doxyfile  GoogleTestReport.html  GoogleTestReport.md  GoogleTestReport.xml  _config.yml  gtest2md.py  main.md
include/geometry/: Basics.hpp  Classification.hpp  Covariance.hpp  Distance.hpp  Featurization.hpp  Geodesic.hpp  Mean.hpp  Median.hpp  Metrics.hpp  Misc.hpp
include/geometry/artifacts/: CASR.hpp
include/geometry/classifier/: CBias.hpp  CMatrixClassifierFgMDM.hpp  CMatrixClassifierFgMDMRT.hpp  CMatrixClassifierFgMDMRTRebias.hpp  CMatrixClassifierMDM.hpp  CMatrixClassifierMDMRebias.hpp  CRebias.hpp  IMatrixClassifier.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_a.js  enumvalues_b.js  enumvalues_c.js  enumvalues_d.js  enumvalues_e.js  files_0.js  files_1.js  (+27 more)
src/: Basics.cpp  Classification.cpp  Covariance.cpp  Distance.cpp  Featurization.cpp  Geodesic.cpp  Mean.cpp  Median.cpp  Misc.cpp
src/artifacts/: CASR.cpp  CASR.hpp
src/classifier/: CBias.cpp  CBias.hpp  CFeatureClassifierLDA.cpp  CFeatureClassifierLDA.hpp  CFgDA.cpp  CFgDA.hpp  CMatrixClassifierFgDA.cpp  CMatrixClassifierFgDA.hpp  CMatrixClassifierFgMDM.cpp  CMatrixClassifierFgMDM.hpp  CMatrixClassifierFgMDMRT.cpp  CMatrixClassifierFgMDMRT.hpp  CMatrixClassifierFgMDMRTRebias.cpp  CMatrixClassifierFgMDMRTRebias.hpp  CMatrixClassifierMDM.cpp  CMatrixClassifierMDM.hpp  CMatrixClassifierMDMRebias.cpp  CMatrixClassifierMDMRebias.hpp  CRebias.cpp  CRebias.hpp  IFeatureClassifier.cpp  IFeatureClassifier.hpp  IMatrixClassifier.cpp  IMatrixClassifier.hpp
src/utils/: Basics.cpp  Basics.hpp  Classification.cpp  Classification.hpp  Covariance.cpp  Covariance.hpp  Distance.cpp  Distance.hpp  Featurization.cpp  Featurization.hpp  Geodesic.cpp  Geodesic.hpp  Mean.cpp  Mean.hpp  Median.cpp  Median.hpp  Metrics.hpp  Misc.cpp  Misc.hpp
test/: Init.hpp  main.cpp  misc.hpp  test_ASR.hpp  test_Basics.hpp  test_Classifier.hpp  test_Covariance.hpp  test_Distance.hpp  test_Featurization.hpp  test_Geodesics.hpp  test_MatrixClassifier.hpp  test_Mean.hpp  test_Median.hpp  test_Misc.hpp
tests/: test_ASR.hpp  test_Init.hpp  test_MatrixClassifier.hpp  test_Misc.hpp  test_RiemannClassif.hpp  test_RiemannUtilsBasics.hpp  test_RiemannUtilsClassif.hpp  test_RiemannUtilsCovariance.hpp  test_RiemannUtilsDistance.hpp  test_RiemannUtilsFeaturization.hpp  test_RiemannUtilsGeodesics.hpp  test_RiemannUtilsMean.hpp  test_UtilsBasics.hpp  test_UtilsClassif.hpp  test_UtilsClassifier.hpp  test_UtilsCovariance.hpp  test_UtilsDistance.hpp  test_UtilsFeaturization.hpp  test_UtilsGeodesics.hpp  test_UtilsMean.hpp  test_UtilsMedian.hpp  test_UtilsMisc.hpp  test_main.cpp
